--- a/SwiftUISamples/Language/Localizable.xcstrings
+++ b/SwiftUISamples/Language/Localizable.xcstrings
@@ -55,6 +55,12 @@
     "%lld" : {
 
     },
+    "Firebase Database 표시 버튼" : {
+
+    },
+    "Firebase Todo" : {
+
+    },
     "fullscreen ListView 표시 버튼" : {
       "localizations" : {
         "en" : {
@@ -114,6 +120,18 @@
           }
         }
       }
+    },
+    "Todo名" : {
+
+    },
+    "Todo名を入力" : {
+
+    },
+    "Todo詳細" : {
+
+    },
+    "Todo追加" : {
+
     },
     "기본설정" : {
       "localizations" : {
@@ -290,6 +308,42 @@
           }
         }
       }
+    },
+    "キャンセル" : {
+
+    },
+    "テキストTodo追加" : {
+
+    },
+    "作成日" : {
+
+    },
+    "写真を選択" : {
+
+    },
+    "写真付きTodo追加" : {
+
+    },
+    "完了" : {
+
+    },
+    "戻る" : {
+
+    },
+    "更新日" : {
+
+    },
+    "未完了" : {
+
+    },
+    "詳細情報" : {
+
+    },
+    "読み込み中..." : {
+
+    },
+    "追加" : {
+
     }
   },
   "version" : "1.0"
