상세화면 완료버튼 추가

--- a/SwiftUISamples/Language/Localizable.xcstrings
+++ b/SwiftUISamples/Language/Localizable.xcstrings
@@ -327,6 +327,9 @@
     "完了" : {
 
     },
+    "完了にする" : {
+
+    },
     "戻る" : {
 
     },
@@ -334,6 +337,9 @@
 
     },
     "未完了" : {
+
+    },
+    "未完了に戻す" : {
 
     },
     "詳細情報" : {
