Supabase 이미지 업로드 추가

--- a/SwiftUISamples/Language/Localizable.xcstrings
+++ b/SwiftUISamples/Language/Localizable.xcstrings
@@ -579,6 +579,15 @@
           }
         }
       }
+    },
+    "添付画像" : {
+
+    },
+    "画像の読み込みに失敗しました" : {
+
+    },
+    "画像読み込み中..." : {
+
     }
   },
   "version" : "1.0"
